--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -21,7 +21,7 @@ header {
     justify-content: center;
     align-items: center;
     padding: 20px 40px;
-    z-index: 10;
+    z-index: 12;
 
     @media (min-width: $tablet) {
       justify-content: space-between;
@@ -92,7 +92,7 @@ header {
         height: 100vh;
         background: $dark-blue;
         text-align: center;
-        z-index: 10;
+        z-index: 12;
         opacity: 1;
         transition: left 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
 
